Fix: no scroll for toc overflow

--- a/static/styles/clean-jsdoc-theme-base.css
+++ b/static/styles/clean-jsdoc-theme-base.css
@@ -474,7 +474,7 @@ code {
     height: 100%;
 }
 
-#toc {
+#eed4d2a0bfd64539bb9df78095dec881 {
     margin: 2rem 0;
     flex: 1;
     overflow: auto;
